# MRF-ETL

./: .gitignore  CONTRIBUTING.md  README.md  REALME.md  pyproject.toml  requirements.txt
examples/: sources.txt
mrf_etl/: __init__.py  cli.py
mrf_etl/core/: __init__.py  bulk_runner.py  ingester.py  layout_detector.py  meta_parser.py  normalizer.py  parser.py  pipeline.py  row_parser.py
mrf_etl/loaders/: __init__.py  base_loader.py  csv_loader.py  mysql_loader.py  postgres_loader.py
mrf_etl/schema/: __init__.py  key_aliases.py  mrf_row.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase5.py
