[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrf-etl"
version = "0.1.0"
description = "Universal MRF CSV parser for hospital price transparency data"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mysql    = ["pymysql>=1.1"]
postgres = ["psycopg2-binary>=2.9"]
all      = ["pymysql>=1.1", "psycopg2-binary>=2.9"]

[project.scripts]
mrf-etl = "mrf_etl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mrf_etl*"]