[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrf-etl"
version = "0.1.0"
description = "Universal MRF CSV parser for hospital price transparency data"
readme = "README.md"                     
license = {text = "Apache-2.0"}            
authors = [
  {name = "Harshal M", email = "harshalmankar61@gmail.com"} 
]
keywords = ["mrf", "healthcare", "price-transparency", "etl", "cms"]
classifiers = [                              
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mysql    = ["pymysql>=1.1"]
postgres = ["psycopg2-binary>=2.9"]
all      = ["pymysql>=1.1", "psycopg2-binary>=2.9"]

[project.scripts]
mrf-etl = "mrf_etl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mrf_etl*"]